--- a/style.css
+++ b/style.css
@@ -8,6 +8,18 @@ body, html {
 	color: #585a5b;
 }
 
+h1 {
+	font-size: 2em;
+}
+
+h2, h3 {
+	font-size: 1.5em;
+}
+
+h4 {
+	font-size: 1em;
+}
+
 ul {
 	padding-left: 0;
 }
